# castp-Script

./: .gitignore  CITATION.cff  README.md  castp.py  pyproject.toml  requirements.txt
.github/: test_app.yml
.github/workflows/: publish.yml  test_app.yml  tests.yml
src/castpfoldpy/: __init__.py  cli.py  client.py
tests/: test_zipfile.py
